# exchange

./: .gitignore  CLAUDE.md  Exchange.csproj  README.md  icon.svg.import  project.godot
Exchange.Training/: .gitignore  README.md  TRAINING_GUIDE.md  analysis.txt  analysis_asymmetric.txt  analysis_mcts-v2_2.txt  analysis_postrework_1.txt  analysis_postrework_2.txt  analysis_postrework_3.txt  analysis_postrework_4.txt  analysis_postrework_5.txt  analysis_postrework_6.txt  pyproject.toml  requirements.txt
Exchange.Training/docs/: ASYMMETRIC_TRAINING.md  SIGNALS_AND_REWARDS_REVIEW.md
Exchange.Training/rust_simulator/: Cargo.toml  README.md  pyproject.toml  setup.sh
Exchange.Training/rust_simulator/src/: lib.rs
Exchange.Training/rust_simulator/src/core/: channels.rs  constants.rs  maps.rs  mod.rs  moves.rs  piece.rs  rewards.rs  types.rs  zobrist.rs
Exchange.Training/rust_simulator/src/eval/: mod.rs  one_ply.rs  onnx.rs
Exchange.Training/rust_simulator/src/game/: mod.rs  simulator.rs  state.rs  tensor.rs
Exchange.Training/rust_simulator/src/mcts/: config.rs  mod.rs  node.rs  search.rs  tree.rs
Exchange.Training/rust_simulator/src/python/: evaluator.rs  functions.rs  mod.rs  simulator.rs  types.rs
Exchange.Training/scripts/: __init__.py  analyze_replays.py  train.py
Exchange.Training/src/: __init__.py  dashboard.py  game_simulator.py  game_state.py  game_viewer.py  mcts.py  mcts_rust.py  onnx_export.py  rust_integration.py  training.py  value_network.py
Scenes/: Main.tscn
Scripts/AI/: AISearchEngine.cs  AISearchEngine.cs.uid  MoveOrderer.cs  MoveOrderer.cs.uid  NeuralNetEvaluator.cs  NeuralNetEvaluator.cs.uid  SimulatedBoardState.cs  SimulatedBoardState.cs.uid  TranspositionTable.cs  TranspositionTable.cs.uid
Scripts/Board/: GameBoard.cs  GameBoard.cs.uid  Tile.cs  Tile.cs.uid
Scripts/Combat/: CombatResolver.cs  CombatResolver.cs.uid  DiceRoller.cs  DiceRoller.cs.uid  EnemyConfiguration.cs  EnemyConfiguration.cs.uid
Scripts/Controllers/: AIController.cs  AIController.cs.uid  GameController.cs  GameController.cs.uid  GameManager.cs  GameManager.cs.uid  TurnController.cs  TurnController.cs.uid
Scripts/Core/: Enums.cs  Enums.cs.uid  GameState.cs  GameState.cs.uid  Logger.cs  Logger.cs.uid  PieceData.cs  PieceData.cs.uid  SaveManager.cs  SaveManager.cs.uid  Vector2I.Extensions.cs  Vector2I.Extensions.cs.uid
Scripts/Map/: ActMap.cs  ActMap.cs.uid  MainGameController.cs  MainGameController.cs.uid  (+12 more)
project-notes/: INITIAL_PROJ_IDEA.md  Steven_ideas.md
(+29 files in other folders)
