[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exchange-training"
version = "0.1.0"
description = "Neural network training for EXCHANGE game AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Steven", email = "dev@exchange.local"}
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "tqdm>=4.65.0",
    "tensorboard>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
train = "scripts.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
