[package]
name = "exchange_simulator"
version = "0.1.0"
edition = "2021"
authors = ["Steven"]
description = "High-performance game simulator for EXCHANGE training"

[lib]
name = "exchange_simulator"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
fastrand = "2.0"
numpy = "0.22"
ndarray = "0.16"
rayon = "1.10"
ort = { version = "2.0.0-rc.9", features = ["coreml"] }
half = { version = "2.4", features = ["num-traits"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
